memoize unit tests/ fix toList / toSet issue